--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ winit = { version = "0.29", features = ["rwh_05"] }
 env_logger = "0.10"
 log = "0.4"
 wgpu = "22.0"
+pollster = "0.3"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.6"
